--- a/lesson6/style/style.css
+++ b/lesson6/style/style.css
@@ -27,9 +27,7 @@ body {
 }
 
 .nav-top {
-    float: right;
-   	padding-bottom: 40px;
-    padding: 10px 26px;
+  	padding: 7px 16px;
     background-color: white;
     font-size: 11px;
     border-radius: 3px 3px 23px 23px;
@@ -39,7 +37,7 @@ body {
 
 .logo {
     float: left;
-    margin-top: 30px;
+    margin-top: 45px;
 }
 
 .nav-top li {
@@ -53,6 +51,14 @@ body {
     text-transform: lowercase;
 }
 
+h3 {
+    font-size: 15px;
+    color: #646464;
+    font-family: Myriad Pro;
+    padding: 40px;
+    float: right;
+}
+
 .nav-top li a.active,
 .nav-top li a:hover {
     color: #2B87C6;
@@ -60,11 +66,16 @@ body {
 
 .nav-bottom {
     float: right;
-    margin: 80px 25px 0 0;
+    margin: 15px 25px 0 0;
     background-color: #6B6765;
     font-size: 16px;
     border-radius: 25px 25px 0px 0px;
 }
+
+.nav-bottom li a.nav-border {
+    border-left: 1px solid #6B6765;
+    border-right: 1px solid #6B6765;
+    }
 
 .nav-bottom li {
     float: left;
@@ -88,6 +99,15 @@ body {
     border-bottom: none;
 }
 
+span {
+    float: right;
+    width: 200px;
+    font-size: 22px;
+    padding-top: 20px;
+    color: #939597;
+    font-family: Myriad Pro;
+}
+
 /*--------------------- main area --------------------*/
 
 .main {
@@ -108,7 +128,7 @@ body {
 
 .category-list li {
     border-bottom: 1px solid #6B6765;
-    padding-top: 4px;
+    padding-top: 10px;
     padding-bottom: 8px;
 }
 
@@ -118,34 +138,24 @@ body {
 }
 
 .category-logo li a  {
-	webkit-filter: grayscale(100%);
-	moz-filter: grayscale(100%);
-	ms-filter: grayscale(100%);
-	o-filter: grayscale(100%);
-	filter: grayscale(100%);
-	filter: gray; 
+	-webkit-filter: grayscale(100%);
 }
 
 .category-logo li a:hover {
-  -webkit-filter: none;
-  -moz-filter: none;
-  -ms-filter: none;
-  -o-filter: none;
-  filter: none;
-  filter: none;
+    -webkit-filter: none;
 }
 
 .rss {
     border-bottom: 1px solid black;
     border-top: 1px solid black;
-    text-align: center;
     padding: 15px 0 20px 0;
-    margin: 60px auto; 
+    margin: 60px 0; 
+    text-align: center;
 }
 
 .rss a {
     border: 3px solid #FFB040;
-    padding: 7px 25px;
+    padding: 7px 45px;
     border-radius: 20px;
     text-decoration: none;
 }
@@ -154,6 +164,8 @@ body {
     color: #939597;
     font-size: 22px;
     font-family: Myriad Pro;
+    margin: -25px -37px;
+    padding: 7px 20px;
 }
 
 h2 {
@@ -192,12 +204,13 @@ h2 {
 }
 
 .content h4 {
-    padding: 15px 0 0 15px;
+    padding: 15px 0 0 120px;
     color: #2ba5ce;
+    font-size: 22px;
 }
 
 dl {
-    padding: 15px 0 15px 120px;
+    padding: 10px 0 15px 120px;
     font-size: 12px;
 }
 
@@ -211,6 +224,11 @@ dd {
     background-color: #DFE5E6;
     margin: 2px 0;
     color: black;
+    height: 17px;
+}
+
+.ceo-nomargin dd {
+    margin: 0;
 }
 
 dd a {
