--- a/lesson7/style/style.css
+++ b/lesson7/style/style.css
@@ -1,20 +1,26 @@
 body {
 	background-color: #edeff1;
-	width: 2000px;
 	height: 4437px;
+}
+
+.container {
+	margin: 0 auto;
+	width: 1256px;
+	text-align: center;
 }
 
 /*--------------------- header area --------------------*/
 
 header {
-	width: 1165px;
-	height: 52px;
-	padding: 49px 419px 46px 416px;
+	height: 147px;
 }
 
 .logo {
+	overflow: hidden;
 	float: left;
 	width: 157px;
+	text-align: left;
+	padding-top: 49px;
 }
 
 .logo a {
@@ -29,25 +35,46 @@ header h1 {
 }
 
 header span {
-	padding: 8px 1px 0 1px;
+	padding: 8px 0 0 0px;
 	height: 16px;
 	color: #dd4b2b;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 36px;
+	text-align: left;
 }
 
 .nav {
+	overflow: hidden;
 	width: 627px;
-	height: 15px;
-	font-size: 18px;
 	font-weight: 400;
 	line-height: 24px;
-	padding: 19px 954px 18px 419px;
+	color: #31353e;
+	display: inline;
+}
+
+nav ul {
+    float: right;
+}
+
+nav ul li {
+    float: left;
+    padding: 70px 30px;
+}
+
+nav ul li a{
+    text-decoration: none;
+    width: 627px;
+	height: 15px;
+	font-family: RobotoSlab;
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 24px;
 	color: #31353e;
 }
+
 .nav a {
-    text-decoration: none;
+	text-decoration: none;
     padding: 0 20px;
 }
 
@@ -59,88 +86,64 @@ header span {
 	color: #edeff1;
 }
 
+header a:hover {
+	background-color: #dd4b2b;
+	border-radius: 25px;
+	color: #edeff1;
+}
 
 /*--------------------- section area --------------------*/
 
-.section_one {
-	background-image: url('../img/background_section_one.png');
+
+.glavnaya_news {
+	background-image: url('../img/background_section_one.jpg');
 	background-size: cover;
 	height: 1321px;
-	text-align: center;
 	color: white;
 	line-height: 48px;
 }
 
-.section_one h1 {
+.glavnaya_news h1 {
 	padding-top: 489px;
 	font-size: 72px;
 	font-weight: 300;
 	line-height: 48px;
 }
 
-.section_one h2, h3 {
+.glavnaya_news h2 {
 	font-size: 30px;
 	font-weight: 700;
 }
 
-.section_one h3 {
-	line-height: 48px;
-}
-
-.section_one .menu {
-	width: 1107px;
-    height: 333px;
-    overflow: hidden;
+.glavnaya_news .menu {
+	height: 333px;
     margin-top: 121px;
-    padding-left: 450px;
+    padding-left: 70px;
 }
 
-.section_one .menu_one {
-    width: 303px;
-    height: 303px;
-    float: left;
-    overflow: hidden;
-}
-
-.section_one .menu_two {
-    width: 326px;
-    height: 333px;
-    float: left;
-    overflow: hidden;
-    padding-left: 80px;
-    padding-right: 75px;
-}
-
-.menu_three {
-    width: 323px;
+.glavnaya_news .tincidunt, .duis_bibendum, .donec_ligula {
+    width: 318px;
     height: 302px;
     float: left;
     overflow: hidden;
 }
- 
-.section_one p {
+
+.glavnaya_news .duis_bibendum {
+    width: 318px;
+    height: 333px;
+    float: left;
+    padding-left: 78px;
+    padding-right: 78px;
+}
+
+.glavnaya_news p {
 	font-family: Roboto;
 	font-size: 15px;
 	font-weight: 300;
 	line-height: 30px;
 }
 
-.section_one .menu_one p {
-	width: 303px;
-	height: 74px;
-}
-
-.section_one .menu_two p {
-	width: 326px;
-	height: 104px;
-}
-
-.section_one .menu_three p {
-	width: 323px;
-	height: 73px;
-}
-
-.section_one_button {
+.glavnaya_news_button {
 	width: 213px;
 	height: 54px;
 	background-color: white;
@@ -149,7 +152,11 @@ header span {
 	margin: 78px auto;
 }
 
-.section_one_button a {
+.glavnaya_news_button:hover {
+	background-color: #dd4b2b;
+}
+
+.glavnaya_news_button a {
 	width: 90px;
 	height: 14px;
 	color: #612316;
@@ -161,18 +168,15 @@ header span {
 	text-decoration: none;
 }
 
-.section_two {
+.news {
 	height: 786px;
 	text-align: center;
 	color: white;
 	line-height: 48px;
 }
 
-.section_two h1 {
+.news h1 {
 	padding-top: 82px;
-	padding-left: 933px;
-	width: 133px;
-	height: 23px;
 	color: #31353e;
 	font-family: RobotoSlab;
 	font-size: 30px;
@@ -180,47 +184,43 @@ header span {
 	line-height: 24px;
 }
 
-.section_two h2 {
+.news h2 {
 	font-size: 24px;
 	font-weight: 700;
 }
 
-.section_two .menu_one {
+.news .menu_one {
 	width: 371px;
     height: 494px;
     float: left;
-    overflow: hidden;
+    padding-left: 44px;
 }
 
-.section_two .menu_two {
+.news .menu_two {
     width: 371px;
     height: 494px;
     float: left;
-    overflow: hidden;
     padding: 0 28px;
 }
 
-.section_two .menu_three {
-   width: 371px;
+.news .menu_three {
+	width: 371px;
     height: 494px;
     float: left;
-    overflow: hidden;
 }
 
-.section_two .menu {
-	width: 1169px;
-    height: 494px;
+.news .menu {
+	height: 494px;
     overflow: hidden;
     margin-top: 84px;
-    padding-left: 450px;
     color: #31353e;
 }
 
-.section_two p {
+.news p {
 	line-height: 30px;
 }
 
-.section_two_button {
+.news_button {
 	width: 179px;
 	height: 54px;
 	background-color: white;
@@ -229,7 +229,11 @@ header span {
 	margin: 29px auto;
 }
 
-.section_two_button a {
+.news_button:hover {
+	background-color: #dd4b2b;
+}
+
+.news_button a {
 	width: 71px;
 	height: 11px;
 	color: #612316;
@@ -241,17 +245,16 @@ header span {
 	text-decoration: none;
 }
 
-.section_three {
-	background-image: url('../img/background_section_three.png');
-	background-size: cover;
+.newsletter {
+	background-image: url('../img/background_newsletter.jpg');
 	height: 383px;
 	text-align: center;
 	color: white;
 	line-height: 48px;
-    background-position: 0px -874px;
+    background-position: 50% 100%;
 }
 
-.section_three h1 {
+.newsletter h1 {
 	padding-top: 91px;
 	height: 24px;
 	color: white;
@@ -261,9 +264,9 @@ header span {
 	line-height: 48px;
 }
 
-.section_three p {
+.newsletter p {
 	padding-top: 22px;
-	padding-left: 730px;
+	padding-left: 360px;
 	width: 533px;
 	height: 38px;
 	font-family: Roboto;
@@ -272,7 +275,7 @@ header span {
 	line-height: 24px;
 }	
 
-.section_three_button {
+.newsletter_button {
     width: 179px;
     height: 54px;
     background-color: white;
@@ -284,17 +287,20 @@ header span {
 input {
 	width: 509px;
 	height: 54px;
-	text-align: center;
+	padding-left: 20px;
 	margin-top: 43px;
 	background-color: rgba(255, 255, 255, 0.2);
 	border: 1px solid rgba(255, 255, 255, 0.5);
 	border-radius: 27px;
 }
 
+input:hover {
+	border: 4px solid #dd4b2b;
+}
+
 button {
 	width: 213px;
 	height: 56px;
-	text-align: center;
 	margin-top: 43px;
 	margin-left: -217px;
 	background-color: white;
@@ -302,7 +308,11 @@ button {
 	border-radius: 27px;
 }
 	
-.section_four {
+button:hover {
+	background-color: #dd4b2b;
+}
+
+.articles {
 	background-color: white;
 	background-size: cover;
 	height: 1021px;
@@ -310,47 +320,49 @@ button {
 	line-height: 48px;
 }
 
-.section_four .menu {
-	width: 1256px;
+.articles .menu {
     height: 866px;
     padding-top: 65px;
-    padding-left: 450px;
     color: #31353e;
 }
 
-.section_four .menu_one, .menu_two {
+.articles .menu_one, .menu_two {
 	width: 1256px;
     height: 407px;
 }
 
-.section_four .menu_one h1 {
+.articles .menu_one h2 {
 	width: 561px;
 	font-size: 24px;
 	font-weight: 700;
 	padding-top: 53px;
 }
 
-.section_four .menu_one p {
+.articles .menu_one p {
 	width: 561px;
 	line-height: 30px;
+	text-align: left;
 }
 
-.section_four .menu_two h1 {
+.articles .menu_two h2 {
 	font-size: 24px;
 	font-weight: 700;
 	padding-left: 45px;
 	padding-top: 63px;
 }
 
-.section_four .menu_two p {
+.articles .menu_two p {
 	line-height: 30px;
+	width: 561px;
+	overflow: hidden;
+	text-align: left;
 }
 
-.section_four .menu_two {
+.articles .menu_two {
 	padding-top: 52px;
 }
 
-.section_four_button {
+.articles_button_left {
 	width: 213px;
 	height: 54px;
 	background-color: #dd4b2b;
@@ -358,11 +370,38 @@ button {
 	border-radius: 27px;
 	margin: 48px 0 0 0;
 }
-.menu_two .section_four_button {
+
+.articles_button_left:hover {
+	background-color: #4b4e73;
+}
+
+.articles_button_right {
+	width: 213px;
+	height: 54px;
+	background-color: #4b4e73;
+	border: 1px solid rgba(255, 255, 255, 0.5);
+	border-radius: 27px;
+	margin: 48px 0 0 0;
+}
+
+.articles_button_right:hover {
+	background-color: #dd4b2b;
+}
+
+.menu_two .articles_button_right {
     margin: 49px 0 0 631px;
 }
 
-.section_four_button a {
+.menu_two img {
+	float: left;
+    padding-right: 40px;
+}
+
+.menu_one img {
+    float: right;
+}
+
+.articles_button_right a {
 	width: 64px;
 	height: 18px;
 	color: white;
@@ -374,36 +413,38 @@ button {
 	text-decoration: none;
 }
 
-.menu_one img {
-	padding-left: 62px;
-}
-
-.menu_two img {
-	padding-right: 43px;
+.articles_button_left a {
+	width: 64px;
+	height: 18px;
+	color: white;
+	font-family: RobotoSlab;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 30px;
+	padding: 19px 60px 21px 80px;
+	text-decoration: none;
 }
 
 .otstup_top {
 	padding-top: 43px;
 }
 
-.footer_top {
+.prais {
     background: #d75d0e;
-    overflow: hidden;
     height: 406px;
-    padding-left: 275px;
 }
 
-.footer_top ul {
+.prais ul {
 	float: left;
-	padding-left: 264px;
+	padding-left: 220px;
 	padding-top: 98px;
 }
 
-footer li a {
+.prais li a {
  	text-align: center;
  }
 
-.footer_top ul li a{
+.prais ul li a {
     text-decoration: none;
     width: 124px;
 	height: 193px;
@@ -413,29 +454,32 @@ footer li a {
 	font-weight: 400;
 	line-height: 36px;
 }
+
+/*--------------------- footer area --------------------*/
     
-.footer_bottom {
-	background-image: url('../img/background_footer_bottom.png');
-	background-position: 0px -875px;
-	background-size: cover;
-	height: 376px;
+footer {
+	background-image: url('../img/background_footer.jpg');
+	line-height: 48px;
+    background-position: 50% 100%;
+	height: 375px;
     text-align: center;
 }
 
-.footer_bottom p{
-	width: 651px;
+footer p {
+	width: 666px;
+	padding-top: 90px;
 	height: 41px;
 	color: white;
 	font-family: ProximaNova;
 	font-size: 18px;
 	line-height: 24px;
 	font-weight: 300;
-	padding-top: 91px;
-	padding-left: 667px;
+	padding-left: 280px;
 }
 
-.footer_bottom span a {
+footer a {
 	font-weight: 700;
 	text-decoration: none;
 	color: white;
 }
+
